[project]
name = "test-granian"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexandre Flament", email = "alexandre.flament@hesge.ch" }
]
dependencies = [
    "fastapi>=0.115.11",
    "granian==2.0.0",
    "prometheus-fastapi-instrumentator>=7.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/test_granian"]
